Fix thread overflow

--- a/nextjs/components/Thread/index.module.scss
+++ b/nextjs/components/Thread/index.module.scss
@@ -8,6 +8,7 @@
   background: $color-white;
   max-width: 100%;
   min-width: 480px;
+  overflow: hidden;
 }
 
 .footer {
